syntax = "proto3";
package ebusta.library.v1;

option go_package = "ebusta/api/proto/v1;libraryv1";

service MessageConverter {
  rpc Convert(ConvertRequest) returns (SearchQuery);
}

message ConvertRequest {
  string raw_query = 1;
}

message FilterNode {
  string field = 1;
  string value = 2;
  int32 operator = 3;
}

message LogicalNode {
  int32 op = 1; // 1: AND, 2: OR
  repeated SearchQuery nodes = 2;
}

message SearchQuery {
  oneof query {
    FilterNode filter = 1;
    LogicalNode logical = 2;
  }
}
